Add run.sh based on Intel